--- a/alfred/ASS/README.adoc
+++ b/alfred/ASS/README.adoc
@@ -9,19 +9,24 @@ endif::[]
 ASS (AWS SSH Simple)
 ====================
 
+For security reason, AWS cloud environment used to have SSH jumpbox / bastion host setup for direct access to EC2 instances.
+
+image::SSH Bastion.png[SSH jumpbox / bastion]
+
 [NOTE]
 ======
-Logon AWS EC2 instances easier even there is a jump box sitting in the middle, blocking you do thing fast.
+But, logon AWS EC2 instances can be easier even there is a jump box sitting in the middle, blocking you do thing fast.
 ======
 
 image::Fuzzy Search in Alfred.gif[Fuzzy Search in Alfred]
+
+TIP: It works!
+
 
 Alfred Terminal Custom iTerm2
 -----------------------------
 
 image::Alfred Terminal Custom - iTerm2.gif[Alfred Terminal Custom - iTerm2]
-
-TIP: It works!
 
 
 References
@@ -29,3 +34,4 @@ References
 
 - Fuzzy search for Alfred 3, _https://github.com/deanishe/alfred-fuzzy_
 - iTerm2 Alfred integration, _https://github.com/stuartcryan/custom-iterm-applescripts-for-alfred_
+- New CloudFormation Templates - VPC bastion host, Jenkins, Security AWS Config, _https://cloudonaut.io/new-cloudformation-templates-vpc-bastion-host-jenkins-security-aws-config/_
