--- a/alfred/ASS/README.adoc
+++ b/alfred/ASS/README.adoc
@@ -1,11 +1,3 @@
-ifdef::env-github[]
-:tip-caption: :bulb:
-:note-caption: :information_source:
-:important-caption: :heavy_exclamation_mark:
-:caution-caption: :fire:
-:warning-caption: :warning:
-endif::[]
-
 ASS (AWS SSH Simple)
 ====================
 
@@ -13,10 +5,7 @@ For security reason, AWS cloud environment used to have SSH jumpbox / bastion ho
 
 image::SSH Bastion.png[SSH jumpbox / bastion]
 
-[NOTE]
-======
-Logon AWS EC2 instances can be easier even there is a jump box sitting in the middle, blocking you do thing fast.
-======
+NOTE: Logon AWS EC2 instances can be easier even there is a jump box sitting in the middle, blocking you do thing fast.
 
 Introduce AWS SSH Simple script, and with fuzzy hosts search, on awesome powerful Alfred.
 
