--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+:bl: pass:[ +]
+
 Mac
 ===
 
@@ -22,6 +24,7 @@ Programming way of creativity
 - JetBrains DataGrip, GoLang, IntelliJ IDEA, PyCharm, WebStorm
 
 - Visual Studio Code
+
 image::https://camo.githubusercontent.com/456f1e620a18af3467f013fdf77630ad5769e930/68747470733a2f2f6d656469612e67697068792e636f6d2f6d656469612f336f36664a356e774f756d4848656a6338552f67697068792e676966[Settings Sync]
 {bl}
 image::https://camo.githubusercontent.com/96cf9494901099730fc3f5bb976c9b5e946be5dc/68747470733a2f2f6d656469612e67697068792e636f6d2f6d656469612f78543949676c4b78537173325764777132632f736f757263652e676966[Settings Sync]
@@ -35,6 +38,7 @@ Handy Tools
 -----------
 
 - Alfred, automatic batch job / workflow for Mac
+
 image::alfred/ASS/Fuzzy{sp}Search{sp}in{sp}Alfred.gif[Fuzzy Search in Alfred]
 {bl}
 image::alfred/ASS/Alfred{sp}Terminal{sp}Custom{sp}-{sp}iTerm2.gif[Alfred Terminal Custom - iTerm2]
