--- a/README.adoc
+++ b/README.adoc
@@ -121,13 +121,21 @@ Creativity
 - **XMind**, the most professional and popular mind mapping tool, _https://www.xmind.net/_
 - **Lucidchart**, create professional flowcharts, process maps, UML models, org charts, _https://www.lucidchart.com/_
 
+Dependencies Tree
+
 image::Lucidchart{sp}dependencies{sp}tree.png[Lucidchart dependencies tree]
 
+Gantt Chart
+
 image::Lucidchart{sp}gantt{sp}chart.png[Lucidchart gantt chart]
+
+Workflow
 
 image::Lucidchart{sp}workflow.png[Lucidchart workflow]
 
 - **Cloudcraft**, visualize your AWS environment as isometric architecture diagrams, _https://cloudcraft.co/_
+
+image::Cloudcraft.png[Cloudcraft]
 
 
 [[Office]]
