--- a/README.adoc
+++ b/README.adoc
@@ -76,7 +76,7 @@ image::alfred/ASS/Alfred{sp}Terminal{sp}Custom{sp}-{sp}iTerm2.gif[Alfred Termina
 - **Karabiner**, mechanic keyboard friend, keyboard customiser for Mac
 - **KeepingYouAwake**, a small menu bar utility prevents your Mac from entering sleep mode
 - **Magnet**, organise your workspace windows accordingly, _http://magnet.crowdcafe.com/_
-- **Shuttle**, a simple SSH shortcut menu for Mac, easiliy to integrate with popular iTerm2, _http://fitztrev.github.io/shuttle/_
+- **Shuttle**, a simple SSH shortcut menu for Mac, easily to integrate with popular iTerm2, _http://fitztrev.github.io/shuttle/_
 
 image::Shuttle.png[Shuttle]
 
