Add Aerail screen saver

--- a/README.adoc
+++ b/README.adoc
@@ -142,6 +142,9 @@ image::Lucidchart{sp}workflow.png[Lucidchart workflow]
 
 image::Cloudcraft.png[Cloudcraft]
 
+- **Aerial screen saver**, Apple TV Aerial Views Screen Saver, _https://github.com/JohnCoates/Aerial_
+
+image::https://cloud.githubusercontent.com/assets/499192/10754100/c0e1cc4c-7c95-11e5-9d3b-842d3acc2fd5.gif[Aerial screen saver]
 
 [[Office]]
 Office Suite
