--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ image::Mac{sp}OS.png[Mac OS]
 Table of contents
 -----------------
 
-- Productivity
+- <<Productivity>>
   * <<Programming, Programming way of creativitiy>>
   * <<Quality, Quality Assurance>>
   * <<Tools, Handy Tools>>
@@ -20,6 +20,7 @@ Table of contents
 - <<References>>
 
 
+[[Productivity]]
 Productivity
 ============
 
