--- a/README.adoc
+++ b/README.adoc
@@ -77,6 +77,9 @@ image::alfred/ASS/Fuzzy{sp}Search{sp}in{sp}Alfred.gif[Fuzzy Search in Alfred]
 image::alfred/ASS/Alfred{sp}Terminal{sp}Custom{sp}-{sp}iTerm2.gif[Alfred Terminal Custom - iTerm2]
 
 - **Karabiner**, mechanic keyboard friend, keyboard customiser for Mac
+
+image::Karabiner.png[Karabiner]
+
 - **KeepingYouAwake**, a small menu bar utility prevents your Mac from entering sleep mode
 - **Magnet**, organise your workspace windows accordingly, _http://magnet.crowdcafe.com/_
 - **Shuttle**, a simple SSH shortcut menu for Mac, easily to integrate with popular iTerm2, _http://fitztrev.github.io/shuttle/_
