Add ScreenFlow screenshot

--- a/README.adoc
+++ b/README.adoc
@@ -240,6 +240,8 @@ image::https://rogueamoeba.com/audiohijack/images/hero-banner-large.png[Audio Hi
 
 **ScreenFlow**, video editing & screen recording, _http://www.telestream.net/screenflow/overview.htm_
 
+image::https://www.telestream.net/company/press/images/PressImage-ScreenFlow8.jpg[ScreenFlow]
+
 
 [[Office]]
 Office Suite
