Minor text change

--- a/README.adoc
+++ b/README.adoc
@@ -206,7 +206,7 @@ image::Text Scanner 4.png[Text Scanner]
 
 image::DaisyDisk.png[DaisyDisk]
 
-**balenaEtcher**, Flash OS images to SD cards & USB drives, safely and easily, _https://www.balena.io/etcher_
+**balenaEtcher**, Flash OS images to SD cards & USB & DVD drives, safely and easily, _https://www.balena.io/etcher_
 
 image::balenaEtcher 1.png[balenaEtcher]
 
