--- a/README.adoc
+++ b/README.adoc
@@ -243,7 +243,7 @@ Source Version Control
 **P4Merge**, track and compare the effects of past and pending work for branches and individual files
 
 
-[Browsers]
+[[Browsers]]
 Browsers
 --------
 
