--- a/README.adoc
+++ b/README.adoc
@@ -228,6 +228,10 @@ image::Vysor.png[Vysor]
 
 image::Paw.png[Paw]
 
+**Inkscape**, is a Free and open source vector graphics editor. It offers a rich set of features and is widely used for both artistic and technical illustrations such as cartoons, clip art, logos, typography, diagramming and flowcharting. It uses vector graphics to allow for sharp printouts and renderings at unlimited resolution and is not bound to a fixed number of pixels like raster graphics, _https://inkscape.org/_
+
+image::Inkscape.png[Inkscape]
+
 It might seem hard to believe, but Apple does not include a simple, blank screen saver with macOS.
 
 Just a simple, blank screen saver for your Mac, _https://intelliscapesolutions.com/screensavers/blankscreen_
