Update blankscreen tool description

--- a/README.adoc
+++ b/README.adoc
@@ -232,7 +232,7 @@ image::Paw.png[Paw]
 
 image::Inkscape.png[Inkscape]
 
-It might seem hard to believe, but Apple does not include a simple, blank screen saver with macOS.
+**blankscreen**, it might seem hard to believe, but Apple does not include a simple, blank screen saver with macOS.
 
 Just a simple, blank screen saver for your Mac, _https://intelliscapesolutions.com/screensavers/blankscreen_
 
