--- a/README.adoc
+++ b/README.adoc
@@ -246,6 +246,10 @@ video::https://cdn.cleanmymac.com/video/main_topper.mp4[width=720,opts=autoplay,
 
 image::CleanMyMac X.png[CleanMyMac X]
 
+**MonitorControl**, for Apple Silicon and Intel, controls your external display brightness and volume and shows native OSD. Use menulet sliders or the keyboard, including native Apple keys, https://github.com/MonitorControl/MonitorControl
+
+image::MonitorControl.png[MonitorControl]
+
 
 [[Storage]]
 Cloud Storage
