Try to embed shottr introduction video in README

--- a/README.adoc
+++ b/README.adoc
@@ -260,7 +260,13 @@ https://shottr.cc/assets/154-shottr-demo.mp4[image:shottr.png[shottr]]
 
 Testing
 
-https://shottr.cc/assets/154-shottr-demo.mp4
+ifdef::env-github[]
+image:https://img.youtube.com/vi/rAteGra5-xM/maxresdefault.jpg[link=https://youtu.be/rAteGra5-xM]
+endif::[]
+
+ifndef::env-github[]
+video::rAteGra5-xM[youtube]
+endif::[]
 
 **OnyX**, is a multifunction utility that you can use to verify the structure of the system files; run miscellaneous maintenance and cleaning tasks; configure parameters in the Finder, Dock, Safari, and some Apple applications; delete caches; remove certain problematic folders and files; rebuild various databases and indexes; and more, _https://www.titanium-software.fr/en/onyx.html_
 
